# partyplays

./: .gitignore  Cargo.toml  README.md  bun.lockb  init.rs  main.rs  package.json  vite.config.js
models/: apistate.rs  error.rs  virtual_target.rs
old/: controller.js  index.html  joystick.js
public/: controller.js  index.html
public/assets/: index-CLhmO4WP.js
src/: handlers.rs  main.rs
src-client/: bun.lockb  package.json  tsconfig.node.json  vite.config.ts
src-client/src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/public/: controller.js  index.html
src-tauri/public/assets/: index-CZkdlWmu.js
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: handlers.rs  init.rs  mod.rs  utils.rs
src-tauri/src/api/models/: appstate.rs  error.rs  input.rs  mod.rs  requests.rs
src-tauri/src/application/: handlers.rs  init.rs  mod.rs
src/api/: handlers.rs  init.rs  mod.rs
src/api/models/: mod.rs  requests.rs
src/models/: mod.rs  requests.rs
src/routes/: +layout.ts  +page.svelte
src/shared_models/: error.rs  mod.rs  shared_state.rs  virtual_target.rs
src/ui/: actions.rs  init.rs  mod.rs  styles.rs
src/ui/components/: controller_button.rs  mod.rs
src/ui/models/: mod.rs  party_plays_app.rs
vanilla_templates/: controller.css  controller.js
