[package]
name = "partyplays"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
eframe = "0.31.1"
egui = "0.31.1"
local-ip-address = "0.6.5"
nanoid = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
vigem-client = "0.1.4"
