[package]
name = "partyplays"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "partyplays_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nanoid = "0.4.0"
axum = { version = "0.8.1", features = ["ws"] }
tokio = "1.44.0"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
vigem-client = "0.1.4"
axum-macros = "0.5.0"
axum-server = "0.7.2"
tower = "0.5.2"
thiserror = "2.0.12"
itertools = "0.14.0"
